--- a/tour-of-heroes/src/app/heroes/heroes.component.css
+++ b/tour-of-heroes/src/app/heroes/heroes.component.css
@@ -7,12 +7,11 @@
 }
 
 .heroes li {
-    cursor          : pointer;
     position        : relative;
-    left            : 0;
+    cursor          : pointer;
     background-color: #EEE;
     margin          : .5em;
-    padding         : .3em 0;
+    padding         : .5em 0;
     height          : 1.6em;
     border-radius   : 4px;
 }
@@ -23,14 +22,17 @@
     left            : .1em;
 }
 
-.heroes li.selected {
-    background-color: #CFD8DC;
-    color           : white;
+.heroes a {
+    color          : #333;
+    text-decoration: none;
+    position       : relative;
+    display        : block;
+    width          : 200px;
+    
 }
 
-.heroes li.selected:hover {
-    background-color: #BBD8DC;
-    color           : white;
+.heroes a:hover {
+    color: #607D8B;
 }
 
 .heroes .badge {
@@ -42,8 +44,37 @@
     line-height     : 1em;
     position        : relative;
     left            : -1px;
-    top             : -4px;
+    top             : -8px;
     height          : 1.8em;
+    min-width       : 16px;
+    text-align      : right;
     margin-right    : .8em;
     border-radius   : 4px 0 0 4px;
+}
+
+button {
+    background-color: #eee;
+    border          : none;
+    padding         : 5px 10px;
+    border-radius   : 4px;
+    cursor          : pointer;
+    cursor          : hand;
+    font-family     : Arial;
+}
+
+button:hover {
+    background-color: #cfd8dc;
+}
+
+button.delete {
+    position        : relative;
+    left            : 220px;
+    top             : -45px;
+    background-color: gray ;
+    color           : white;
+}
+
+button.delete:hover {
+    background-color: red;
+    color: white;
 }
