--- a/tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,4 +1,13 @@
 <h2>My Heroes</h2>
+<div>
+  <label>Hero name:
+    <input #heroName (keyup.enter)="add(heroName.value); heroName.value=''" />
+  </label>
+  <!-- (click) passes input value to add() and then clears the input -->
+  <button (click)="add(heroName.value); heroName.value=''">
+    Add
+  </button>
+</div>
 
 <!-- <ul class="heroes">
   <li *ngFor="let hero of heroes"
@@ -9,9 +18,10 @@
 </ul> -->
 
 <ul class="heroes">
-  <li *ngFor="let hero of heroes">
-    <div routerLink="/detail/{{hero.id}}">
+  <li *ngFor="let hero of heroes" routerLink="/detail/{{hero.id}}">
+    <a>
       <span class="badge">{{hero.id}}</span> {{hero.name}}
-    </div>
+    </a>
+    <button class="delete" title="delete hero" (click)="delete(hero)">Remove</button>
   </li>
 </ul>
