--- a/project1/src/app/auth/login/login.component.html
+++ b/project1/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
-<section class="signup-form">
-    <form fxLayout="column" fxLayoutAlign='center center' fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
-        
+<section>
+    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
+    
         <mat-form-field>
             <input type="email" matInput placeholder="Your email" ngModel name="email" email required
                 #emailInput="ngModel">
@@ -8,17 +8,22 @@
             <mat-error *ngIf="!emailInput.hasError('required')"> Email is invalid</mat-error>
         </mat-form-field>
 
-        <mat-form-field >
+        <mat-form-field hintLabel="Should be at least 6 characters long.">
             <input type="password" matInput placeholder="Your password" ngModel name="password" required minlength="6"
                 #pwInput="ngModel">
             <mat-hint align="end"> {{pwInput.value?.length}}/ 6</mat-hint>
-            <!-- <mat-error> Password should have at least 6 characters</mat-error> -->
+            <mat-error> Password should have at least 6 characters</mat-error>
         </mat-form-field>
 
-
-        <button class = "submitButton"type="submit" mat-raised-button color="primary" [disabled]="f.invalid">
-            Submit
-        </button>
+        <button type="submit" mat-raised-button color="primary" [disabled]="loginForm.invalid">Submit</button>
 
     </form>
 </section>
+
+<!-- <ol>
+        <li>Add an email and password field (with Material Components of course)</li>
+        <li>Add validation (email => required and email, password => required)</li>
+        <li>Show errors and hints</li>
+        <li>Make form submittable and disable button if invalid</li>
+        <li>BONUS: Do all of that by using the reactive approach!</li>
+      </ol> -->
