--- a/project1/src/app/auth/signup/signup.component.html
+++ b/project1/src/app/auth/signup/signup.component.html
@@ -15,7 +15,7 @@
         </mat-form-field>
 
         <mat-form-field>
-            <input matInput [min]="minDate" [max]="maxDate"  [matDatepicker]="picker" placeholder="Your birthdate" ngModel name="birthdate" required >
+            <input matInput [max]="maxDate"  [matDatepicker]="picker" placeholder="Your birthdate" ngModel name="birthdate" required >
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
@@ -25,6 +25,5 @@
         <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">
             Submit
         </button>
-
     </form>
 </section>
