--- a/project1/src/app/training/training.component.html
+++ b/project1/src/app/training/training.component.html
@@ -8,4 +8,4 @@
     <!-- <mat-tab label="Current Training"> Content 2 </mat-tab> -->
 
 </mat-tab-group>
-<app-current-training (trainingStop)="ongoingTraining=false" *ngIf="ongoingTraining"></app-current-training>
+<app-current-training (trainingExit)="ongoingTraining=false" *ngIf="ongoingTraining"></app-current-training>
