--- a/workoutApp/project1/src/app/training/new-training/new-training.component.html
+++ b/workoutApp/project1/src/app/training/new-training/new-training.component.html
@@ -1,19 +1,21 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
-    <mat-card fxFlex.xs="100%" fxFlex="400px">
-        <mat-card-title fxLayoutAlign="center"> Time to work out!</mat-card-title>
-        <mat-card-content fxLayoutAlign="center">
-            <mat-form-field>
-                <mat-label>Select workout</mat-label>
-                <mat-select>
-                    <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
-                        {{exercise.name}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions fxLayoutAlign="center">
-            <button type="submit" mat-button (click)="onStartTraining()">Start</button>
-        </mat-card-actions>
-    </mat-card>
+    <form #f="ngForm" (ngSubmit)="onStartTraining(f)">
+        <mat-card fxFlex.xs="100%" fxFlex="400px">
+            <mat-card-title fxLayoutAlign="center"> Time to work out!</mat-card-title>
+            <mat-card-content fxLayoutAlign="center">
+                <mat-form-field>
+                    <mat-label>Select workout</mat-label>
+                    <mat-select placeholder="Select an Exercise" ngModel name="exercise" required>
+                        <mat-option #selected *ngFor="let exercise of exercises" [value]="exercise.id">
+                            {{exercise.name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </mat-card-content>
+            <mat-card-actions fxLayoutAlign="center">
+                <button type="submit" mat-raised-button color="accent" [disabled]="f.invalid">Start</button>
+            </mat-card-actions>
+        </mat-card>
+    </form>
 
 </section>
